# Project-III

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  phase1.cpp  phase1.h  phase2.cpp
example-data/: classrooms.json  courses.json  request.json  teachers.json
src/: main.cpp  phase1.cpp  phase1.h  phase2.cpp  phase2.h  phase3.cpp  phase3.h
src/controller/: TeacherSchedulerController.cpp  TeacherSchedulerController.h
src/scheduler/: phase1.cpp  phase1.h  phase2.h  phase3.cpp
